<resources>
    <string name="app_name">Agenda Contactos</string>
    <string name="presentacion">Desarrollado por:</string>
    <string name="integrante1">Ricardo Hernandez Santoyo</string>
    <string name="integrante2">Eduado Jose Gil Apastillar</string>
    <string name="integrante3">Fermin Lara Chavez</string>
    <string name="integrante4">Andrea Guadalupe Rosas Miranda</string>
    <string name="titleApp">Agenda</string>
</resources>